--- a/resources/views/templates/about-us/index.antlers.html
+++ b/resources/views/templates/about-us/index.antlers.html
@@ -20,7 +20,7 @@
         {{# Background image #}}
         <div class="absolute z-[-1] flex items-center justify-center top-0">
             <div>
-                <img src="/assets/img/backgrounds/floor-mid-gray.svg" class="w-[1120px] h-[900px]"/>
+                <img src="/assets/img/backgrounds/floor-mid-gray.svg" class="w-[1120px] h-[900px]">
             </div>
         </div>
     </div>
