--- a/resources/views/partials/decoration/_floor-background.antlers.html
+++ b/resources/views/partials/decoration/_floor-background.antlers.html
@@ -1,7 +1,7 @@
 <div class="container z-[-1] relative">
     <div class="absolute right-[-55rem] md:right-[-45rem] lg:right-[-23rem] top-0">
         <div>
-            <img src="/assets/img/backgrounds/{{ background }}.svg" class="w-[1120px] h-[900px]"/>
+            <img src="/assets/img/backgrounds/{{ background }}.svg" class="w-[1120px] h-[900px]">
         </div>
     </div>
 </div>
