--- a/resources/views/templates/members/index.antlers.html
+++ b/resources/views/templates/members/index.antlers.html
@@ -71,7 +71,7 @@
         {{# Background image #}}
         <div x-show="filteredMembers.length > 10" class="absolute z-[-1] h-full w-full flex items-center left-[-10rem] top-0">
             <div>
-                <img src="/assets/img/backgrounds/floor-mid-gray.svg" class="w-[1120px] h-[900px]"/>
+                <img src="/assets/img/backgrounds/floor-mid-gray.svg" class="w-[1120px] h-[900px]">
             </div>
         </div>
     </div>
