--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -117,7 +117,11 @@ input[type="checkbox"] {
 
 /* Bard content */
 blockquote {
-    @apply p-6 bg-secondary-light lg:p-10;
+    @apply p-6 bg-orange-50 my-8 border border-orange-100 rounded-md;
+}
+
+blockquote :last-child {
+    @apply mb-0;
 }
 
 /* Sets */
@@ -200,7 +204,12 @@ button[data-checked="true"] {
     }
 }
 
+code,
 pre code,
 pre.hljs {
-    @apply !bg-gray-50 block rounded-sm shadow-inner my-10 !p-5 overflow-x-auto text-gray-900
+    @apply !bg-gray-50 block rounded-md my-10 !p-5 overflow-x-auto text-gray-900
+}
+
+code {
+    @apply inline !px-2 !py-1 rounded-md border-gray-100 border
 }
