--- a/resources/views/templates/events/show.antlers.html
+++ b/resources/views/templates/events/show.antlers.html
@@ -19,7 +19,7 @@
                 {{ if date_start }}
                     <div class="flex flex-col sm:table-row">
                         <div class="font-semibold sm:table-cell">Datum</div>
-                        <div class="sm:table-cell "><span class="capitalize whitespace-nowrap">{{ date_start format_localized="%A" }}</span> {{ date_start format_localized="%e %B %Y" }}</div>
+                        <div class="sm:table-cell "><span class="capitalize whitespace-nowrap">{{ date_start iso_format="%A" }}</span> {{ date_start iso_format="%e %B %Y" }}</div>
                     </div>
                 {{ /if }}
                 {{ if time_start }}
