--- a/resources/views/templates/events/show.antlers.html
+++ b/resources/views/templates/events/show.antlers.html
@@ -36,8 +36,8 @@
                 {{ /if }}
                 {{ if address }}
                     <div class="flex flex-col sm:table-row">
-                        <div class="pr-6 font-semibold sm:table-cell lg:pr-10">Soort event</div>
-                        <div class="sm:table-cell ">{{ type }}</div>
+                        <div class="pr-6 font-semibold sm:table-cell lg:pr-10">Adres</div>
+                        <div class="sm:table-cell ">{{ address }}</div>
                     </div>
                 {{ /if }}
             </div>
