Fix typos again

--- a/resources/views/templates/home/index.antlers.html
+++ b/resources/views/templates/home/index.antlers.html
@@ -56,7 +56,7 @@
                 </div>
                 {{ /collection:clients }}
 
-                {{# Temporaily add a 2nd and 3rd loop for filling clients,
+                {{# Temporarily add a 2nd and 3rd loop for filling clients,
                     and use full width with the SwiperJS loop that needs at least 6 items,
                     and currently there are 3 actual clients #}}
                 {{ collection:clients logo:isset="true" sort="DESC" }}
