--- a/resources/views/layouts/layout.antlers.html
+++ b/resources/views/layouts/layout.antlers.html
@@ -50,12 +50,14 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="https://use.typekit.net/oap5ojy.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ mix src='assets/css/tailwind.css' }}">
+
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+
+    {{ vite src="resources/js/site.js|resources/css/tailwind.css" }}
 </head>
 
 <body class="font-sans leading-normal bg-white text-primary-text">
@@ -66,7 +68,7 @@
     </div>
 
     {{ dynamic_token }}
-    <script src="{{ mix src='assets/js/site.js' }}"></script>
+
 </body>
 
 </html>
