--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -9,7 +9,7 @@ body {
 
 .container {
     width: 100%;
-    max-width: 1230px;
+    max-width: 1230px !important;
 }
 
 h1 {
@@ -88,11 +88,11 @@ article img {
 
 input:not([type="checkbox"]),
 textarea {
-    @apply w-full !bg-secondary-light border-transparent !ring-0 focus:border-primary-accent;
+    @apply w-full bg-secondary-light! border-none ring-0! focus:border-primary-accent;
 }
 
 input[type="checkbox"] {
-    @apply w-6 h-6 mr-2 border rounded bg-secondary-light text-primary-accent focus:ring-primary-accent focus:ring-opacity-25 border-tertiary-light border-opacity-40;
+    @apply w-6 h-6 mr-2 border rounded-sm bg-secondary-light text-primary-accent focus:ring-primary-accent/25 border-tertiary-light/40;
 }
 
 .mt {
@@ -130,7 +130,7 @@ blockquote :last-child {
 }
 
 .set .set {
-    @apply !px-0;
+    @apply px-0!;
 }
 
 /* Navigation */
@@ -179,7 +179,7 @@ header nav.animated.make-large {
 
 /* Filter (members page) */
 button[data-checked="true"] {
-    @apply border-primary-accent opacity-100 !text-tertiary-dark;
+    @apply border-primary-accent opacity-100 text-tertiary-dark!;
 }
 
 /* Image group hover */
@@ -207,9 +207,9 @@ button[data-checked="true"] {
 code,
 pre code,
 pre.hljs {
-    @apply !bg-gray-50 block rounded-md my-10 !p-5 overflow-x-auto text-gray-900;
+    @apply bg-gray-50! block rounded-md my-10 p-5! overflow-x-auto text-gray-900;
 }
 
 code {
-    @apply inline !px-2 !py-1 rounded-md border-gray-100 border;
+    @apply inline px-2! py-1! rounded-md border-gray-100 border;
 }
