--- a/resources/views/partials/_navigation.antlers.html
+++ b/resources/views/partials/_navigation.antlers.html
@@ -1,6 +1,6 @@
 {{# TODO: Use is_homepage (if it works) #}}
 {{# TODO: Use is_current (if it works) #}}
-{{ nav_url_class = style == 'contrast' ? '!text-white hover:border-primary-contrast': 'hover:border-primary-accent' }}
+{{ nav_url_class = style == 'contrast' ? 'text-white! hover:border-primary-contrast': 'hover:border-primary-accent' }}
 {{ nav_logo = style == 'contrast' ? '/assets/img/logo-alt.svg': '/assets/img/logo.svg' }}
 
 {{ nav:main }}
