--- a/resources/views/partials/blocks/_base.antlers.html
+++ b/resources/views/partials/blocks/_base.antlers.html
@@ -12,7 +12,7 @@
         {{ /if }}
     {{ /if }}
     {{ if link }}
-        <a href="{{ link }}" title="{{ title }}" class="!text-primary-text">
+        <a href="{{ link }}" title="{{ title }}" class="text-primary-text!">
     {{ /if }}
         {{ slot }}
     {{ if link }}
