--- a/resources/views/partials/blocks/_meta-alt.antlers.html
+++ b/resources/views/partials/blocks/_meta-alt.antlers.html
@@ -1,6 +1,6 @@
 <div class="block-meta-alt px-6 sm:px-0 flex flex-col w-full {{ class }}">
     {{ if title }}
-        <span class="meta !mb-0">{{ title }}</span>
+        <span class="meta mb-0!">{{ title }}</span>
     {{ /if }}
     {{ if text }}
         {{ if link }}
