--- a/resources/views/partials/buttons/_swiper.antlers.html
+++ b/resources/views/partials/buttons/_swiper.antlers.html
@@ -1,6 +1,6 @@
-<div class="!hidden md:!flex group mx-10 lg:mx-6 h-12 !w-12 after:hidden {{ class }}">
-    <div class="relative h-12 !w-12 items-center justify-center">
-        <div class="flex items-center justify-center h-12 !w-12 transition-transform group-hover:-translate-x-1 group-hover:-translate-y-1 z-20 bg-tertiary-dark {{ button_class }}">{{ slot }}</div>
+<div class="hidden! md:flex! group mx-10 lg:mx-6 h-12 w-12! after:hidden {{ class }}">
+    <div class="relative h-12 w-12! items-center justify-center">
+        <div class="flex items-center justify-center h-12 w-12! transition-transform group-hover:-translate-x-1 group-hover:-translate-y-1 z-20 bg-tertiary-dark {{ button_class }}">{{ slot }}</div>
         <div class="absolute bottom-0 right-0 w-full h-full border z-10 border-tertiary-dark {{ background_class }}"></div>
     </div>
 </div>
