--- a/resources/views/templates/contact/index.antlers.html
+++ b/resources/views/templates/contact/index.antlers.html
@@ -23,7 +23,7 @@
                     {{ fields }}
                         {{ if handle != 'agree' }}
                             <div class="mb-6 {{ if first }}mt{{ /if }}">
-                                <label for="{{ handle }}"><span class="meta !text-[0.9rem] sm:text-auto">{{ display }}</span></label>
+                                <label for="{{ handle }}"><span class="meta text-[0.9rem]! sm:text-auto">{{ display }}</span></label>
                                 {{ if instructions_position == 'above' }}
                                     {{ instructions }}
                                 {{ /if }}
