--- a/resources/views/partials/_footer.antlers.html
+++ b/resources/views/partials/_footer.antlers.html
@@ -17,7 +17,7 @@
     <div class="px-6 lg:px-10 pb-10 bg-secondary-light {{ if call_to_action }} pt-24 lg:pt-32 {{ else }} pt-6 lg:pt-10 {{ /if }}">
         <h2 id="footer-title" class="mb-2 text-[25px] lg:text-[48px] font-bold text-primary-accent lg:mb-10 xl:mb-2">{{ site.name }}</h2>
         <nav class="hidden w-full h-16 mb-10 space-x-10 align-middle xl:flex">
-            {{ partial:navigation class="font-normal" active_class="!border-tertiary-light" style="default" }}
+            {{ partial:navigation class="font-normal" active_class="border-tertiary-light!" style="default" }}
         </nav>
         <div class="flex flex-col">
             <h4 class="hidden lg:block">Leden</h4>
@@ -60,7 +60,7 @@
                                         {{ fields }}
                                             {{ field regex_replace=">$| style='background-color:#fff !important;'>" }}
                                         {{ /fields }}
-                                        {{ partial:buttons/dark type="submit" class="w-full ml-auto sm:w-auto" button_class="w-12 !px-0" }}<img src="/assets/img/icons/send.svg" alt="Aanmelden" class="mx-5">{{ /partial:buttons/dark }}
+                                        {{ partial:buttons/dark type="submit" class="w-full ml-auto sm:w-auto" button_class="w-12 px-0!" }}<img src="/assets/img/icons/send.svg" alt="Aanmelden" class="mx-5">{{ /partial:buttons/dark }}
                                     </div>
                                 {{ /form:create }}
                             {{ /if }}
@@ -86,7 +86,7 @@
                     <a href="https://www.larabelles.com/" target="_blank" style="display: inline-block"><img src="/assets/img/larabelles.png" alt="Larabelles" style="height: 45px"></a>
                 </div>
                 <div class="w-full pl-0 md:w-5/12 lg:pl-10 text-left: lg:text-right">
-                    &copy {{ now format="Y" }} - {{ site.name }} | <a href="https://vormkracht10.nl" class="text-primary-text hover:text-primary-text" title="Gerealiseerd door het team van Vormkracht10" target="_blank">VK<span class="!text-primary-accent">10</span></a>
+                    &copy {{ now format="Y" }} - {{ site.name }} | <a href="https://vormkracht10.nl" class="text-primary-text hover:text-primary-text" title="Gerealiseerd door het team van Vormkracht10" target="_blank">VK<span class="text-primary-accent!">10</span></a>
                 </div>
             </div>
         </div>
