--- a/resources/views/partials/blocks/_image-left.antlers.html
+++ b/resources/views/partials/blocks/_image-left.antlers.html
@@ -5,7 +5,7 @@
             src="{{ glide src="{featured_image}" fit="crop_focal" width="1280" }}" alt="{{ featured_image:alt ?? title }}">
         {{ /if }}
     </figure>
-    {{ partial:blocks/base class="w-full lg:w-2/3 !pb-16" }}
+    {{ partial:blocks/base class="w-full lg:w-2/3 pb-16!" }}
         {{ slot }}
     {{ /partial:blocks/base }}
     {{ partial:buttons/more :link="link" class="" button_class="" background_class="" }}
