--- a/resources/views/partials/blocks/_image-right-larger.antlers.html
+++ b/resources/views/partials/blocks/_image-right-larger.antlers.html
@@ -5,7 +5,7 @@
                 src="{{ glide src="{featured_image}" fit="crop_focal" width="1280" }}" alt="{{ featured_image:alt ?? title }}" />
         {{ /if }}
     </figure>
-    {{ partial:blocks/base class="relative z-10 w-full lg:w-2/3 lg:mt-48 !pb-16" }}
+    {{ partial:blocks/base class="relative z-10 w-full lg:w-2/3 lg:mt-48 pb-16!" }}
         {{ slot }}
         {{ partial:buttons/more :link="link" class="" button_class="" background_class="" }}
     {{ /partial:blocks/base }}
