--- a/resources/views/partials/buttons/_light-alt.antlers.html
+++ b/resources/views/partials/buttons/_light-alt.antlers.html
@@ -1,3 +1,3 @@
-{{ partial:buttons/base :link="link" class="" button_class="transition-colors !text-tertiary-regular group-hover:!text-tertiary-dark border border-tertiary-light group-hover:border-primary-accent group-hover:translate-x-0 group-hover:translate-y-0 { button_class }" background_class="{ background_class }" }}
+{{ partial:buttons/base :link="link" class="" button_class="transition-colors text-tertiary-regular! group-hover:text-tertiary-dark! border border-tertiary-light group-hover:border-primary-accent group-hover:translate-x-0 group-hover:translate-y-0 { button_class }" background_class="{ background_class }" }}
     {{ slot }}
 {{ /partial:buttons/base }}
