--- a/resources/views/templates/cases/index.antlers.html
+++ b/resources/views/templates/cases/index.antlers.html
@@ -8,7 +8,7 @@
 <section class="mb">
     {{ collection:cases limit="9" sort="date:desc" }}
         {{ case_block = { switch between='blocks/image-left-larger|blocks/image-right-larger' } }}
-        {{ partial:{ case_block } class="lg:!w-3/4 py-4 lg:py-0 { switch between='|lg:ml-[25%]' }" :image="featured_image" :title="title_long" :category="member:title" link="/cases/{ slug }" }}
+        {{ partial:{ case_block } class="lg:w-3/4! py-4 lg:py-0 { switch between='|lg:ml-[25%]' }" :image="featured_image" :title="title_long" :category="member:title" link="/cases/{ slug }" }}
         {{ introduction }}
         {{ /partial:{ case_block } }}
     {{ /collection:cases }}
