--- a/resources/views/templates/what-is-laravel/index.antlers.html
+++ b/resources/views/templates/what-is-laravel/index.antlers.html
@@ -24,7 +24,7 @@
                     <h3>{{ content regex_replace="^<p>|<p>&quot;" regex_replace="</p>$|&quot;</p>" }}</h3>
                     <div class="flex flex-col items-baseline lg:flex-row">
                         <h4 class="mb-0">{{ title }}</h4>
-                        <span class="meta lg:ml-4 !mb-0">{{ arr({ function }, { client_name }) | remove_empty | list }}</span>
+                        <span class="meta lg:ml-4 mb-0!">{{ arr({ function }, { client_name }) | remove_empty | list }}</span>
                     </div>
                 </div>
             </div>
