--- a/resources/views/partials/banners/_home.antlers.html
+++ b/resources/views/partials/banners/_home.antlers.html
@@ -29,8 +29,8 @@
             <h1 class="mb-5 text-white">{{ header_title }}</h1>
             <div class="mb-10 text-white">{{ header_content }}</div>
             <div class="flex flex-col justify-start space-y-5 sm:flex-row sm:space-y-0 sm:space-x-5">
-                {{ partial:buttons/primary-border link="/leden" type="button" }}Zoek Laravel Experts{{ /partial:buttons/primary-border }}
-                {{ partial:buttons/primary-border link="/lid-worden" type="button" }}Word lid{{ /partial:buttons/primary-border }}
+                {{ partial:buttons/primary-border-alt link="/leden" class="text-white group-hover:bg-white group-hover:text-primary-accent" type="button" }}Zoek Laravel Experts{{ /partial:buttons/primary-border-alt }}
+                {{ partial:buttons/primary-border-alt link="/lid-worden" class="text-white group-hover:bg-white group-hover:text-primary-accent" type="button" }}Word lid{{ /partial:buttons/primary-border-alt }}
             </div>
         </div>
         <div class="flex-col items-end justify-end hidden w-1/2 lg:flex">
