--- a/resources/views/partials/buttons/_more.antlers.html
+++ b/resources/views/partials/buttons/_more.antlers.html
@@ -1,3 +1,7 @@
 {{ partial:buttons/primary :link="link" class="absolute! right-0 bottom-0 { class }" button_class="px-0! w-12 aspect-square { button_class }" background_class="{ background_class }" }}
-    &gt;
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="size-4">
+            <path fill-rule="evenodd"
+                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06Z"
+                clip-rule="evenodd" />
+        </svg>
 {{ /partial:buttons/primary }}
