--- a/resources/views/partials/buttons/_primary-border-alt.antlers.html
+++ b/resources/views/partials/buttons/_primary-border-alt.antlers.html
@@ -1,3 +1,3 @@
-{{ partial:buttons/base :link="link" button_class="border {{ class}}" }}
+{{ partial:buttons/base :link="link" button_class="border {{ class}}" background_class="{{ background_class }}" }}
     {{ slot }}
 {{ /partial:buttons/base }}
