--- a/resources/views/partials/_navigation_mobile.antlers.html
+++ b/resources/views/partials/_navigation_mobile.antlers.html
@@ -1,15 +1,28 @@
-{{ nav:main }}
-    {{ if page.slug == 'home' && show_home_logo == true }}
-        <div class="w-full px-6 pt-[1.5rem] pb-0">
-            <a href="{{ homepage }}" class="flex justify-start w-full {{ class }}">
-                <img class="max-w-full max-h-[3rem] xl:max-h-full" src="{{ nav_logo }}" alt="{{ title }}">
+<div class="w-full px-6 pt-[1.5rem] pb-0">
+    <a href="{{ homepage }}" class="flex justify-start w-full {{ class }}">
+        <img class="max-w-full max-h-[3rem] xl:max-h-full" src="{{ nav_logo }}" alt="{{ title }}">
+    </a>
+</div>
+{{ partial:decoration/line }}
+
+<div class="-mt-7 px-7">
+    {{ nav:main }}
+        <li class="{{ if depth == 1 }} list-none {{else}} flex items-center gap-2.5 before:content-['■'] before:text-primary-accent before:text-sm {{ /if }}">
+            <a href="{{ url }}"
+                class=" flex w-full items-center h-auto border-b border-transparent  {{if is_current or is_parent}} {{active_class}} {{ /if }} {{if depth == 1}} font-bold mt-7 {{else}} mt-0.5 {{ /if }} {{ class }}">
+                {{title }}
             </a>
-        </div>
-        {{ partial:decoration/line }}
-    {{ else }}
-    {{ navigation_class = (slug == page.slug || segment_1 == page.slug) ? {active_class}: '' }}
-        <a href="/{{ page.slug != 'home' ?= page.slug }}"
-            class="{{ if index === 1 }} md:mt-[-1rem] {{ endif }} flex w-full items-center h-auto px-10 py-4 border-b border-transparent hover:bg-primary-accent hover:text-white {{ class }} {{ navigation_class }}">{{
-            title }}</a>
-    {{ /if }}
-{{ /nav:main }}
+            {{ if children }}
+                <ul
+                    class="flex flex-col space-y-2 mt-3">
+                    {{*recursive children* }}
+                </ul>
+            {{ /if }}
+        </li>
+    {{ /nav:main }}
+</div>
+
+<div class="px-7 mt-10">
+    {{ partial:buttons/primary-border-alt background_class="border-primary-accent group-hover:!bg-white" class="bg-primary-accent !text-white border-primary-accent group-hover:text-primary-accent"
+    link="/lid-worden" type="button" }}Lid worden{{ /partial:buttons/primary-border-alt }}
+</div>
